--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,7 @@ en:
     stop_edit: "Stop editing"
     cancel: "Cancel"
     save: "Save"
+    delete: "Löschen"
     submit: "Continue"
     remember: "remember credentials"
     wrongPassword: "Error: wrong password"
@@ -47,6 +48,14 @@ en:
     error: "missing or wrong parameters"
     enterPassword: "Your data is encrypted. Enter your password to decrypt it!"
     configuration_menu: "Configuration"
+    new_topic: "New Topic"
+    to_data_vault: "go to Data Vault"
+    rec_list: "List"
+  color:
+    turquoise: "turquoise"
+    purple: "purple"
+    green: "green"
+    yellow: "yellow"
   config:
     title: "Connect to Personal Data Store"
     intro: "Choose the type of connection to your Personal Data Store and enter afterwards the necessary credentials."
@@ -68,7 +77,7 @@ en:
     imprint_url: "https://www.ownyourdata.eu/en/imprint/"
     language: "Language"
   dialog:
-    newEntry: "New Entry"
+    newEntry: "New Topic"
     dateLbl: "Date"
   date:
     formats:
